# docs/swagger.json
@@ -29,6 +29,22 @@
                 "tags": [
                     "blog"
                 ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "model",
+                        "name": "take",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "model",
+                        "name": "skip",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -40,6 +56,36 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "parameters": [
+                    {
+                        "description": "model",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Blog"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Blog"
+                        }
+                    }
+                }
             }
         }
     },
@@ -47,14 +93,14 @@
         "models.Blog": {
             "type": "object",
             "properties": {
+                "author": {
+                    "type": "string"
+                },
                 "content": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
-                },
-                "releaseDate": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
