# models/album.go
@@ -1,10 +1,0 @@
-package models
-
-import "time"
-
-type Blog struct {
-	ID          string
-	Title       string
-	Content     string
-	ReleaseDate time.Time
-}
